--- a/templates/page.tmpl
+++ b/templates/page.tmpl
@@ -180,13 +180,18 @@ Links:
 <a href="<TMPL_VAR URL>"><TMPL_VAR PAGE></a>
 </TMPL_LOOP>
 <TMPL_IF MORE_BACKLINKS>
+<TMPL_IF HTML5><details><summary>...</summary>
+<TMPL_ELSE>
 <span class="popup">...
 <span class="balloon">
+</TMPL_IF>
 <TMPL_LOOP MORE_BACKLINKS>
 <a href="<TMPL_VAR URL>"><TMPL_VAR PAGE></a>
 </TMPL_LOOP>
+<TMPL_IF HTML5></details><TMPL_ELSE>
 </span>
 </span>
+</TMPL_IF>
 </TMPL_IF>
 <TMPL_IF HTML5></nav><TMPL_ELSE></div></TMPL_IF>
 </TMPL_IF>
