WIP: include parent page in comment moderation

--- a/templates/commentmoderation.tmpl
+++ b/templates/commentmoderation.tmpl
@@ -10,6 +10,9 @@
 <TMPL_LOOP COMMENTS>
 <div>
 <div>
+  <header>
+    <strong><TMPL_VAR PARENT></strong>
+  </header>
 <TMPL_VAR VIEW>
 </div>
 <input id="defer_<TMPL_VAR ID>" type="radio" value="Defer" name="<TMPL_VAR ID>" checked="checked" />
